Retirada da aba inferior e correção do tamanho das fontes.

--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -23,3 +23,7 @@ $positive  : #21BA45;
 $negative  : #C10015;
 $info      : #31CCEC;
 $warning   : #F2C037;
+
+$body-font-size   : 15px !default;
+
+$body1: (size: 1.12rem,     line-height: 1.5rem,   letter-spacing: .03125em,  weight: 400) !default
